--- a/sass/blocks/index/_benefits.sass
+++ b/sass/blocks/index/_benefits.sass
@@ -3,9 +3,9 @@
     position: relative
     &::before
         content: ''
-        background: url(../img/dotted.png) left no-repeat
+        background: url(../img/bg2.png) left no-repeat
         width: 100%
-        min-height: 300px
+        min-height: 310px
         position: absolute
         top: 0
         left: 0
@@ -18,9 +18,8 @@
             position: relative
             background-color: #ffffff
             color: #2e2e2e
-            margin: 0 0 80px
+            margin: 0 0 30px
             max-width: 480px
-            line-height: 60px
         &__text
             position: relative
             background-color: #ffffff
@@ -28,7 +27,7 @@
             margin: 0 0 55px
             font-family: 'Open Sans', sans-serif
             font-size: 20px
-            font-weight: bold
+            font-weight: normal
             max-width: 880px
             line-height: 26px
         &s
@@ -81,3 +80,5 @@
                     font-weight: 600
     &__color
         color: $white
+.mb
+    margin: 0 0 80px
