--- a/sass/blocks/index/_layout.sass
+++ b/sass/blocks/index/_layout.sass
@@ -3,7 +3,7 @@
     padding: 70px 0 188px
     &::before
         content: ''
-        background: url(../img/dotted.png) left top no-repeat
+        background: url(../img/bg1.png) left top no-repeat
         max-width: 551px
         width: 100%
         min-height: 663px
